# lua_cpp_playground

./: .gitmodules  CMakeLists.txt  README.md  main.cpp
lua/: bar.lua  baz.lua  foo.lua  utils.lua
shared_state/: demo_shared_state.h
shared_state/lua/: bar.lua  baz.lua  foo.lua
unique_state/: demo_unique_state.h
unique_state/lua/: a.lua  b.lua
